@@ -1,0 +1,14 @@
+/**
+ * Copyright (C) 2014 Infinite Automation Software. All rights reserved.
+ * @author Terry Packer
+ */
+package com.serotonin.m2m2.rt.console;
+
+
+/**
+ * @author Terry Packer
+ *
+ */
+public class MangoLogStorageAppender {
+	//TODO Extend AbstractAppender from Log4j2
+}
